--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Dice Roller</string>
+    <string name="instructions">Click on the button to roll the dice</string>
+    <string name="result">Your dice value is: %d</string>
+    <string name="roll">Roll Dice</string>
 </resources>
